--- a/src/app/pages/perfil-gerente/vista-citas-rechazadas/vista-citas-rechazadas.component.html
+++ b/src/app/pages/perfil-gerente/vista-citas-rechazadas/vista-citas-rechazadas.component.html
@@ -8,35 +8,35 @@
         </div>
     </div>
     <div class='input-section'>
-        <form  class='input-form'>
+        <form  [formGroup]="registroVehiculoForm" class='input-form'>
             <div class='input'>
-                <input type="text" formControlName="correo" required placeholder="nombrecliente@example.com"><span class='bar'></span>
+                <input type="text" formControlName="placa" required><span class='bar'></span>
                 <span>INGRESA LEL CORREO DEL USUARIO AL QUE ASIGNAR UNA CITA</span>
             </div>
-            <button class='input-button' type="submit">BUSCAR</button>
+            <button class='input-button' (click)="search()">BUSCAR</button>
         </form>
     </div>
   
     <!--este forma debe de ser un ng if-->
-  
     <div class='form-square'>
         <div class='form-square-background'>
               <div class='identificador'>
-                  <span>ASIGNAR CITA A VC.RUJANA@CORREO.COM</span>
+                <span *ngIf="!correo">SIN RESULTADOS</span>
+                <span *ngIf="correo">ENCONTRADO USUARIO DE CORREO {{correo}}</span>
               </div>
-            <form class='fechaForm'>
+            <form class='fechaForm' [formGroup]="fechaForm">
               <div class='columnas'>
                 <div class="cajas">
                   <div class="identificador1">
-                      <label>Nombre: </label>
-                      <p>Fecha rechazada:</p>
+                      <label>Nombre: {{nombre}}</label>
+                      <p>Fecha rechazada: {{fecha}}</p>
                   </div>
                   <div class="fecha">
                       <label class="fecha-nueva">Fecha nueva: </label>
                       <input class="fechi" type="datetime-local" formControlName="fechax">
                   </div>
                   <div class="btn-asignar">
-                      <button class="asignar">ASIGNAR</button>
+                      <button class="asignar" (click)="asignar()">ASIGNAR</button>
                   </div>
                 </div>
               </div>
