--- a/src/app/pages/perfil-gerente/vista-reporte-mecanico/vista-reporte-mecanico.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-mecanico/vista-reporte-mecanico.component.html
@@ -3,20 +3,18 @@
 
 <div class="wrapper">
     <div class="contenedor">
-        <div class="search">
-            <input type="text" placeholder="  Ingrese placa del vehiculo">
+        <div class="search" [formGroup]="form">
+            <input type="text" placeholder="  Ingrese placa del vehiculo" formControlName="correo">
         </div>
         <div class="btn-search">
-            <button>Buscar</button>
+            <button (click)='search()'>Buscar</button>
         </div>
     </div>
     
     <div class="container">
-        <p>Nombre del Mecanico:</p>
-        <p>Tiempo de trabajo:</p>
-        <p>Cantidad de vehiculos atendidos:</p>
-        <p>Servicio hecho por el mecanico:</p>
-        <p>Ordenes atendidas:</p>
+        <p>Nombre del Mecanico: {{nombre}}</p>
+        <p>Servicios hecho por el mecanico: {{servicios}}</p>
+        <p>Ordenes atendidas: {{ordenes}}</p>
     </div>
 </div>
 
