--- a/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
@@ -2,22 +2,20 @@
 <app-navbar-perfil-gerente></app-navbar-perfil-gerente>
 
 <div class="wrapper">
-    <div class="contenedor">
+    <div class="contenedor" [formGroup]="form">
         <div class="search">
-            <input type="text" placeholder="  Ingrese placa del vehiculo">
+            <input type="text" placeholder="  Ingrese placa del vehiculo" formControlName="placa">
         </div>
         <div class="btn-search">
-            <button>Buscar</button>
+            <button (click)='search()'>Buscar</button>
         </div>
     </div>
     
     <div class="container">
-        <p>Dueno del vehiculo:</p>
-        <p>Placa:</p>
-        <p>Modelo:</p>
-        <p>Servicio hecho por el mecanico:</p>
-        <p>Danos:</p>
-        <p>Nombre del mecanico:</p>
+        <p>Dueño del vehiculo: {{duenno}}</p>
+        <p>Placa: {{placa}}</p>
+        <p>Modelo: {{modelo}}</p>
+        <p>Servicios realizados en el taller: {{servicios}}</p>
     </div>
 </div>
 
