arreglando detalles parte 1

--- a/src/app/pages/perfil-gerente/vista-citas/vista-citas.component.html
+++ b/src/app/pages/perfil-gerente/vista-citas/vista-citas.component.html
@@ -3,7 +3,7 @@
 
 <div class='wrapper'>
     <div class="title">
-      <label>GESTION DE CITAS</label>
+      <label>GESTIÓN DE CITAS</label>
     </div>
       <div class="botones">
           <button class="btn"[routerLink]="['/calendario']">CALENDARIO DE CITAS</button>
