--- a/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.html
@@ -5,7 +5,7 @@
     <div class="contenedor">
         <div class="selector">
             <select id = "busqueda">
-                <option value = "Cedula">Cedula</option>
+                <option value = "Cedula">Cédula</option>
                 <option value = "Correo">Correo</option>
                 <option value = "Nombre">Nombre</option>
             </select>   
@@ -21,12 +21,12 @@
     <div class="container">
         <p>Nombre:</p>
         <p>Correo:</p>
-        <p>Cedula:</p>
+        <p>Cédula:</p>
         <p>Cantidad de citas:</p>
-        <p>Cantidad de vehiculos registrados:</p>
-        <p>Vehiculo 1:</p>
-        <p>Vehiculo 2:</p>
-        <p>Vehiculo 3:</p>
+        <p>Cantidad de vehículos registrados:</p>
+        <p>Vehículo 1:</p>
+        <p>Vehículo 2:</p>
+        <p>Vehículo 3:</p>
         <p>Dinero gastado por el cliente:</p>
     </div>
 </div>
