--- a/src/app/pages/perfil-gerente/vista-reporte-extras/vista-reporte-extras.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-extras/vista-reporte-extras.component.html
@@ -6,7 +6,7 @@
         <select id = "roles" name='roles' class="cosas">
             <option value = "marca">Marcas que mas reinciden en Paralelo 4x4</option>
             <option value = "usuario">Datos del usuario promedio</option>
-            <option value = "herramientas">Analisis de herramientas mas utilizadas</option>
+            <option value = "herramientas">Análisis de herramientas mas utilizadas</option>
         </select>   
     </div>
     <div class="grafico">
