--- a/src/app/pages/perfil-gerente/vista-reporte-mecanico/vista-reporte-mecanico.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-mecanico/vista-reporte-mecanico.component.html
@@ -12,10 +12,10 @@
     </div>
     
     <div class="container">
-        <p>Nombre del Mecanico:</p>
+        <p>Nombre del Mecánico:</p>
         <p>Tiempo de trabajo:</p>
-        <p>Cantidad de vehiculos atendidos:</p>
-        <p>Servicio hecho por el mecanico:</p>
+        <p>Cantidad de vehículos atendidos:</p>
+        <p>Servicio hecho por el mecánico:</p>
         <p>Ordenes atendidas:</p>
     </div>
 </div>
