--- a/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
@@ -12,12 +12,12 @@
     </div>
     
     <div class="container">
-        <p>Dueno del vehiculo:</p>
+        <p>Dueño del vehículo:</p>
         <p>Placa:</p>
         <p>Modelo:</p>
-        <p>Servicio hecho por el mecanico:</p>
-        <p>Danos:</p>
-        <p>Nombre del mecanico:</p>
+        <p>Servicio hecho por el mecánico:</p>
+        <p>Daños:</p>
+        <p>Nombre del mecánico:</p>
     </div>
 </div>
 
