--- a/src/app/pages/perfil-gerente/vista-reportes/vista-reportes.component.html
+++ b/src/app/pages/perfil-gerente/vista-reportes/vista-reportes.component.html
@@ -7,8 +7,8 @@
   </div>
     <div class="botones">
         <button class="btn"[routerLink]="['/vista-reporte-cliente']">CLIENTE</button>
-        <button class="btn" [routerLink]="['/vista-reporte-vehiculo']">VEHICULO</button>
-        <button class="btn" [routerLink]="['/vista-reporte-mecanico']">MECANICO</button>
+        <button class="btn" [routerLink]="['/vista-reporte-vehiculo']">VEHÍCULO</button>
+        <button class="btn" [routerLink]="['/vista-reporte-mecanico']">MECÁNICO</button>
         <button class="btn" [routerLink]="['/vista-reporte-extras']">EXTRAS</button>
     </div>
 </div>
