--- a/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
+++ b/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
@@ -29,9 +29,14 @@ label{
     margin-left: 20px;
 }
 
+
+.fechas{
+    margin-left: 200px;
+}
+
 .fecha{
     background-color: red;
-    margin-left: -580px;
+    margin-left: -250px;
     width: 450px;
     margin-top: 8px;
     height: 0px;
