--- a/src/app/pages/perfilAdmin/vista-datos-perfil-admin/vista-datos-perfil-admin.component.html
+++ b/src/app/pages/perfilAdmin/vista-datos-perfil-admin/vista-datos-perfil-admin.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class='group2'>
                     <input type="text" required id="cedula" formControlName="cedula" required maxlength="8"><span class='bar'></span>
-                    <label for=''>CEDULA DE IDENTIDAD</label>
+                    <label for=''>CÉDULA DE IDENTIDAD</label>
                 </div>
                 <div class='group3'>
                     <input type="text" required id="fecha" formControlName="fecha"><span class='bar'></span>
@@ -28,7 +28,7 @@
                 </div>
                 <div class='group4'>
                     <input type="text" required id="numero" formControlName="numero"><span class='bar'></span>
-                    <label for=''>NUMERO DE TELÉFONO</label>
+                    <label for=''>NÚMERO DE TELÉFONO</label>
                 </div>
                 <button class='send-button' (click)="modificarInfoUsuario()">GUARDAR</button>
             </form>
