--- a/src/app/pages/perfilCliente/vista-faq/vista-faq.component.html
+++ b/src/app/pages/perfilCliente/vista-faq/vista-faq.component.html
@@ -5,7 +5,7 @@
 <div class="wrapper">
   <div class="cajas">
     <div class="caja">
-      <label for="title1">¿Cuánto dura la reparación de mi automóvil?</label>
+      <label for="title1">¿Cuánto dura la reparación de mi vehículo?</label>
       <div class="btn1">
         <button class="btn" *ngIf="plus1"(click)="showingBox1()"><i class="fa fa-plus" aria-hidden="true"></i></button>
         <button class="btn" *ngIf= "showBox1"(click)="hidingBox1()"><i class="fa fa-minus" aria-hidden="true"></i></button>
@@ -13,11 +13,12 @@
     </div>
     <div class="caja1">
       <div class="content" *ngIf="showBox1" >
-        <p >hola</p>
+        <p>Dependiendo de la reparación, puede durar aproximadamente 2 días.
+        </p>
       </div>
     </div>
     <div class="caja">
-      <label for="title1">¿Cuánto dura la reparación de mi automóvil?</label>
+      <label for="title1">¿Cuáles son sus métodos de pago?</label>
       <div class="btn1">
         <button class="btn" *ngIf="plus2"(click)="showingBox2()"><i class="fa fa-plus" aria-hidden="true"></i></button>
         <button class="btn" *ngIf= "showBox2"(click)="hidingBox2()"><i class="fa fa-minus" aria-hidden="true"></i></button>
@@ -25,11 +26,11 @@
     </div>
     <div class="caja1">
       <div class="content" *ngIf="showBox2" >
-        <p >hola</p>
+        <p >Nuestros métodos de pago son: efectivo,Paypal, Zelle y punto de venta</p>
       </div>
     </div>
     <div class="caja">
-      <label for="title1">¿Cuánto dura la reparación de mi automóvil?</label>
+      <label for="title1">¿Por qué no puedo solicitar una cita?</label>
       <div class="btn1">
         <button class="btn" *ngIf="plus3"(click)="showingBox3()"><i class="fa fa-plus" aria-hidden="true"></i></button>
         <button class="btn" *ngIf= "showBox3"(click)="hidingBox3()"><i class="fa fa-minus" aria-hidden="true"></i></button>
@@ -37,7 +38,7 @@
     </div>
     <div class="caja1">
       <div class="content" *ngIf="showBox3" >
-        <p >hola</p>
+        <p >Para solicitar una cita debe de tener un vehículo registrado</p>
       </div>
     </div>
   </div>
