input vista gerente cambiado

--- a/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.html
+++ b/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.html
@@ -33,7 +33,8 @@
                 </div>
                 <div class="fecha">
                     <label>Fecha: </label>
-                    <input class="fechi" type="datetime-local" formControlName="fechax">
+                    <input class="fechi" type="date" formControlName="fechax">
+                    <input class="fechi" type="time" formControlName="fechax">
                 </div>
                 <div class="btn-asignar">
                     <button class="asignar" (click)='asignar()'>ASIGNAR</button>
