--- a/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.scss
+++ b/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.scss
@@ -134,6 +134,7 @@
         width: 100%;
         margin-bottom: 0;
         margin: auto;
+        height: 75%;
     }
 
     .container-fluid .row .col-md-5{
@@ -164,6 +165,7 @@
             width: 100%;
             margin-bottom: 0;
             margin: auto;
+            
         }
     
         .container-fluid .row .col-md-5{
