--- a/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
+++ b/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
@@ -70,6 +70,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 33.33%;
 }
 
 .form-square .form-square-background .form-tittle{
@@ -81,8 +82,8 @@
     margin-bottom: 20px;
 }
 
-.wrapper .form-square .form-square-background .send-button{
-    height: 35px;
+.send-button{
+    height: 8%;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px; 
@@ -94,12 +95,10 @@
 }
 
 input{
-    width: 200px;
-    height: 10px;
+    width: 90%;
+    height: 30%;
     border-radius: 5px;                      
-    font-size: 15px;            
-    margin: 10px 10px 10px 5px; 
-    padding: 10px 10px 10px 5px;
+    font-size: 15px;
     display: block;             
     border: none;
 }
@@ -108,11 +107,12 @@ label{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px; 
     font-weight: bold;
+    
 }
 @media screen and (max-width: 600px) {
     .wrapper{
         width: 100%;
-        height: 300%;
+        height: 200%;
         padding-bottom: 0;
         margin-bottom: 0;
     }
@@ -121,17 +121,14 @@ label{
         height: 90%;
         margin-bottom: 0;
     }
-    .wrapper .form-square .form-square-background .send-button{
-        width: 50%;
-        height: 5%;
-        margin-left: 25%; 
-    }
+    
 
     .form-square .form-square-background .form .columnas{
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: 100%;
+        align-items: center;
     }
     .form-square .form-square-background .form .columna1{
         width: 100%;
@@ -148,13 +145,35 @@ label{
         width: 100%;
         height: 60%;
         align-items: center;
+    
     }
+    label{
+        margin: auto;
+        font-size: 11px;
+
+    }
+ 
+
+
 }
 @media screen and (max-width: 1024px) {
     .wrapper{
         width: 100%;
-        height: 100%;
         padding-bottom: 0;
         margin-bottom: 0;
     }
+    .form-square .form-square-background{
+        width: 80%;
+        height: 90%;
+        margin-bottom: 0;
+    }
+    .wrapper .form-square .form-square-background .send-button{
+        width: 50%;
+        height: 8%;
+        margin-top: 2%;
+        margin-left: 25%; 
+    }
+
+   
+   
     }
