--- a/src/app/pages/perfil-gerente/vista-citas-rechazadas/vista-citas-rechazadas.component.html
+++ b/src/app/pages/perfil-gerente/vista-citas-rechazadas/vista-citas-rechazadas.component.html
@@ -34,7 +34,7 @@
                   <div class="fecha">
                       <label class="fecha-nueva">Fecha nueva: </label>
                       <input class="fechi" type="date" formControlName="fechax">
-                      <input class="fechi" type="time" formControlName="fechax">
+                      <input class="fechi" type="time" formControlName="horax">
                   </div>
                   <div class="btn-asignar">
                       <button class="asignar" (click)="asignar()">ASIGNAR</button>
