--- a/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.scss
+++ b/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.scss
@@ -3,7 +3,7 @@
 .navbar{
     width: 75%;
     height: 20%;
-    background-color: #494949;
+    background-color: rgb(66, 66, 66);
 }
 
 .navbar .logo-menu{
