--- a/src/app/components/perfilAdmin/form-admin-role/form-admin-role.component.html
+++ b/src/app/components/perfilAdmin/form-admin-role/form-admin-role.component.html
@@ -29,7 +29,7 @@
             <div class="group6">
              <select id = "roles" formControlName="acceso" name='roles'>
                  <option value = "gerente">Gerente</option>
-                 <option value = "mecanico">Mecanico</option>
+                 <option value = "mecanico">Mecánico</option>
                  <option value = "cliente">Cliente</option>
              </select>           
               <label for="">ROL</label>
@@ -38,7 +38,6 @@
         </div>
         <div class="btns">
           <button class = "btn" (click)="modificarInfoUsuario()">GUARDAR CAMBIOS</button>
-          <input class = "btn"  type = "reset" value = "RESTABLECER">
         </div>        
       </form>
     </div>
