--- a/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.html
+++ b/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.html
@@ -2,7 +2,7 @@
     <div class='buttons'>
         <div class='registrase'>
             <div class='cuadro1'>
-                <span><a [routerLink]="['/vista-datos-perfil-cliente']" style="color:white; text-decoration: none;">{{correo}}</a></span>
+                <span><a [routerLink]="['/vista-datos-perfil-cliente']" style="color:white; text-decoration: none;">{{nom}}</a></span>
             </div>
             <div class='registrase' *ngIf="user">
                 <div class='cuadro2'>
