--- a/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.html
+++ b/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.html
@@ -7,13 +7,13 @@
             <span><a [routerLink]="['/citas-gerente']">CITAS</a></span>
         </div>
         <div class='contacto-button'>
-            <span><a [routerLink]="['/ordenes-gerente']">ORDENES</a></span>
+            <span><a [routerLink]="['/ordenes-gerente']">ÓRDENES</a></span>
         </div>
         <div class='about-button'>
             <span><a [routerLink]="['/reportes']" >REPORTES</a></span>
         </div>
         <div class='about-button'>
-            <span><a [routerLink]="['/cerrar-ordenes']" >CERRAR ORDENES</a></span>
+            <span><a [routerLink]="['/cerrar-ordenes']" >CERRAR ÓRDENES</a></span>
         </div>
     </div>
 </div>
