--- a/src/app/components/perfilMecanico/nabvar-derecho-perfil-mecanico/nabvar-derecho-perfil-mecanico.component.html
+++ b/src/app/components/perfilMecanico/nabvar-derecho-perfil-mecanico/nabvar-derecho-perfil-mecanico.component.html
@@ -2,7 +2,7 @@
     <div class='buttons'>
         <div class='iniciar-sesion'>
             <div class='cuadro1'>
-                <span><a [routerLink]="['/vista-perfil-mecanico']" style="color: white; text-decoration: none;">Valeria</a></span>
+                <span><a [routerLink]="['/vista-perfil-mecanico']" style="color: white; text-decoration: none;">{{nom}}</a></span>
             </div>
         </div>
         <div class='registrase' *ngIf="user">
