--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
@@ -3,7 +3,7 @@
 .ventana{
     width: 100%;
     height: 80%;
-    background-color: #494949;
+    background-color: rgb(66, 66, 66);
     
     
 }
