--- a/src/app/pages/perfil-gerente/vista-cerrar-ordenes/vista-cerrar-ordenes.component.html
+++ b/src/app/pages/perfil-gerente/vista-cerrar-ordenes/vista-cerrar-ordenes.component.html
@@ -4,7 +4,7 @@
 <div class='wrapper'>
     <div class='title-box'>
         <div class='title'>
-            <span>CERRAR ORDENES</span>
+            <span>CERRAR ÓRDENES</span>
         </div>
     </div>
     <div class='input-section'>
