--- a/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.html
@@ -12,11 +12,11 @@
     </div>
     
     <div class="container">
-        <p>Nombre: {{nombre}}</p>
-        <p>Correo: {{correo}}</p>
-        <p>Cedula: {{cedula}}</p>
-        <p>Vehiculo 1: {{vehiculo1}}</p>
-        <p>Vehiculo 2: {{vehiculo2}}</p>
-        <p>Vehiculo 3: {{vehiculo3}}</p>
+        <p>Nombre del cliente: {{nombre}}</p>
+        <p>Correo del cliente: {{correo}}</p>
+        <p>Cédula del cliente: {{cedula}}</p>
+        <p>Vehículo 1 registrado: {{vehiculo1}}</p>
+        <p>Vehículo 2 registrado: {{vehiculo2}}</p>
+        <p>Vehículo 3 registrado: {{vehiculo3}}</p>
     </div>
 </div>
