--- a/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
@@ -12,9 +12,9 @@
     </div>
     
     <div class="container">
-        <p>Dueño del vehiculo: {{duenno}}</p>
-        <p>Placa: {{placa}}</p>
-        <p>Modelo: {{modelo}}</p>
+        <p>Dueño del vehículo: {{duenno}}</p>
+        <p>Placa del vehículo: {{placa}}</p>
+        <p>Modelo del vehículo: {{modelo}}</p>
         <p>Servicios realizados en el taller: {{servicios}}</p>
     </div>
 </div>
