--- a/src/app/pages/perfilCliente/vista-registro-vehiculo2/vista-registro-vehiculo2.component.scss
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo2/vista-registro-vehiculo2.component.scss
@@ -101,21 +101,39 @@ button{
 }
 
 .citas{
-    height: 0px;
+    height: 400px;
+    width: 300px;
+    margin-right: 120px;
+    margin-top: 20px;
+    //background-color: red;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Athiti', sans-serif ;
+    color: white;
+    text-align: center;
+}
+
+.foto{
+    width: 250px;
+    height: 250px;
+    text-align: center;
+    //background-color: rosybrown;
+    margin: 10px;
+    margin-left: 25px;
 }
 
 img{
     width: 250px;
     height: 250px;
-    margin-right: 100px;
-    margin-top: 60px;
-    margin-bottom: 0px;
-    padding: 0px;
+}
+.title2{
+    margin-top: 20px;
+    font-size: 20px;
+    //background-color: royalblue;
+    height: 40px;
 }
 
-
 .btn2{
-    position: static;
-    margin-top: 350px;
-    margin-left: -350px;
+    height: 50px;
+    //background-color: green;
 }
