--- a/src/app/components/perfilAdmin/navbar-derecho-admin/navbar-derecho-admin.component.html
+++ b/src/app/components/perfilAdmin/navbar-derecho-admin/navbar-derecho-admin.component.html
@@ -2,7 +2,7 @@
     <div class='buttons'>
         <div class='iniciar-sesion'>
             <div class='cuadro1'>
-                <span><a [routerLink]="['/vista-datos-perfil-admin']" style="color: white; text-decoration: none;">VALERIA RUJANA</a></span>
+                <span><a [routerLink]="['/vista-datos-perfil-admin']" style="color: white; text-decoration: none;">{{nom}}</a></span>
             </div>
         </div>
         <div class='registrase' *ngIf="user">
