--- a/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.scss
+++ b/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.scss
@@ -25,7 +25,7 @@
     height: 30%;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     font-family:'Athiti', sans-serif;
     font-size: 15px;
     font-weight: bold;
