--- a/src/app/components/perfilAdmin/search-bar-user/search-bar-user.component.scss
+++ b/src/app/components/perfilAdmin/search-bar-user/search-bar-user.component.scss
@@ -12,17 +12,19 @@
     height: 20%;
     width: 100%;
     display: flex;
+    margin-top: -20px;
 }
 
 .bar .input{
     height: 65%;
     width: 55%;
     margin-left: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 13px; 
     font-weight: bold;
     margin-top: 20px;
     color: white;
+    border-radius: 36px 12px;
 }
 
 input{
@@ -34,22 +36,23 @@ input{
     padding: 10px 10px 10px 5px;
     display: block;             
     border: none;
+    border-radius: 36px 12px;
 }
 
 .bar .input-button{
     height: 30px;
     width: 70px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 15px; 
     font-weight: bold;
     margin-top: 30px;
-    border-radius: 5px;
     background-color: white;
-    border-color: black;
+    border: none;
+    margin-left: 5px;
 }
 
 label{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 13px; 
     font-weight: bold;
 }
