--- a/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.scss
+++ b/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.scss
@@ -55,16 +55,17 @@ button{
 }
 
 .container{
-    height: 350px;
+    height: 300px;
     margin-top: 100px;
     font-family: 'Athiti', sans-serif;
     background-color: rgb(255, 201, 51);
     width: 65%;
     margin-left: 20%;
+    border-radius: 36px 12px;
 }
 
 p{
-    margin-top: 25px;
+    margin-top: 35px;
     height: 15px;
     margin-left: 20px;
 }
