--- a/src/app/pages/perfil-gerente/vista-reporte-mecanico/vista-reporte-mecanico.component.scss
+++ b/src/app/pages/perfil-gerente/vista-reporte-mecanico/vista-reporte-mecanico.component.scss
@@ -61,10 +61,11 @@ button{
     background-color: rgb(255, 201, 51);
     width: 65%;
     margin-left: 20%;
+    border-radius: 36px 12px;
 }
 
 p{
-    margin-top: 30px;
+    margin-top: 80px;
     height: 15px;
     margin-left: 20px;
 }
