--- a/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.scss
+++ b/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.scss
@@ -55,12 +55,13 @@ button{
 }
 
 .container{
-    height: 200px;
+    height: 300px;
     margin-top: 100px;
     font-family: 'Athiti', sans-serif;
     background-color: rgb(255, 201, 51);
     width: 65%;
     margin-left: 20%;
+    border-radius: 36px 12px;
 }
 
 p{
