--- a/src/app/pages/perfilCliente/vista-registro-vehiculo3/vista-registro-vehiculo3.component.html
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo3/vista-registro-vehiculo3.component.html
@@ -37,7 +37,7 @@
                     </div>
                     <div>
                         <button (click)="RegistrarVehiculo()">GUARDAR CAMBIOS</button>
-                        <button>DESACTIVAR</button>
+                        <button (click)='desactivar()'>DESACTIVAR</button>
                     </div>
                 </form>
             </div>
