--- a/src/app/pages/perfil-gerente/vista-cerrar-ordenes/vista-cerrar-ordenes.component.html
+++ b/src/app/pages/perfil-gerente/vista-cerrar-ordenes/vista-cerrar-ordenes.component.html
@@ -23,7 +23,7 @@
         <div class='form-square-background'>
               <div class='identificador'>
                 <span *ngIf="!placa">SIN RESULTADOS</span>
-                <span *ngIf="placa">ENCONTRADO USUARIO DE CORREO {{placa}}</span>
+                <span *ngIf="placa">ENCONTRADO VEHÍCULO DE PLACA {{placa}}</span>
               </div>
             <form  class='fechaForm' [formGroup]="formPrecios">
               <div class='columnas'>
