--- a/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.html
+++ b/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.html
@@ -23,7 +23,7 @@
         <div class='form-square-background'>
             <form [formGroup]="infoVehiculo" class='cahnges-form' >  <!--este es el form-->
                 <div class='identificador'>
-                    <span *ngIf="placa">VEHICULO ENCONTRADO DE PLACA {{placa}} ENCONTRADO</span>
+                    <span *ngIf="placa">VEHÍCULO DE PLACA {{placa}} ENCONTRADO</span>
                     <span *ngIf="!placa">SIN RESULTADOS</span>
                 </div>
                 <div class='columnas'>
