--- a/src/app/pages/perfil-gerente/vista-citas-rechazadas/vista-citas-rechazadas.component.html
+++ b/src/app/pages/perfil-gerente/vista-citas-rechazadas/vista-citas-rechazadas.component.html
@@ -11,7 +11,7 @@
         <form  [formGroup]="registroVehiculoForm" class='input-form'>
             <div class='input'>
                 <input type="text" formControlName="placa" required><span class='bar'></span>
-                <span>INGRESA LEL CORREO DEL USUARIO AL QUE ASIGNAR UNA CITA</span>
+                <span>INGRESA LA PLACA DEL VEHÍCULO AL QUE DESEAS ASIGNAR UNA CITA</span>
             </div>
             <button class='input-button' (click)="search()">BUSCAR</button>
         </form>
@@ -22,7 +22,7 @@
         <div class='form-square-background'>
               <div class='identificador'>
                 <span *ngIf="!correo">SIN RESULTADOS</span>
-                <span *ngIf="correo">ENCONTRADO USUARIO DE CORREO {{correo}}</span>
+                <span *ngIf="correo">ENCONTRADO VEHíCULO DE PLACA {{correo}}</span>
               </div>
             <form class='fechaForm' [formGroup]="fechaForm">
               <div class='columnas'>
