--- a/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.scss
+++ b/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.scss
@@ -67,6 +67,7 @@
     
     .container-fluid .collapse .navbar-nav .nav-item{
         width: 30%;
+        font-size: 11px;
         
     }
     }
