--- a/src/app/pages/perfilCliente/vista-faq/vista-faq.component.scss
+++ b/src/app/pages/perfilCliente/vista-faq/vista-faq.component.scss
@@ -47,16 +47,16 @@ label{
   height: 30px;
   margin-top: 7px;
   border-radius: 6px;
-  margin-bottom: -5px;
+
   margin-left: 25%;
 }
 .content{
-  height: 30px;
+  height: 45px;
   background-color: white;
   width: 100%;
   margin-top: 7px;
   border-radius: 6px;
-  margin-bottom: -5px;
+
 
 }
 
@@ -102,10 +102,11 @@ button{
     margin-bottom: 5%;
   }
   .caja1{
+    margin-top: 1%;
     width: 80%;
-    height: 50px;
   }
   .content{
+    margin-top: 1%;
     width: 80%;
     margin-bottom: 5%;
   }
@@ -124,15 +125,16 @@ button{
   .container-fluid .row .container-fluid{
     width: 80%;
     margin: auto;
-    margin-bottom: 5%;
+    margin-top: 5%;
   }
   .caja1{
+    margin-top: 1%;
     width: 80%;
-    height: 50px;
   }
   .content{
+    margin-top: 1%;
     width: 80%;
     margin-bottom: 5%;
   }
-   
+
     }
