--- a/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.scss
+++ b/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.scss
@@ -1,15 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
-<<<<<<< HEAD
-@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
-=======
 
-
-$phone: 480px;
-
->>>>>>> e474e7fce8e8ce2d5857c936187a4be02a04ff48
 .navbar{
     height: 20%;
-<<<<<<< HEAD
     margin-top: 0;
     padding-top: 0%;
     padding-right: 0%;
@@ -18,11 +10,6 @@ $phone: 480px;
 }
 .navbar-light{
     background-color: #494949;
-=======
-    @media(max-width: $phone){
-        width: 80%;
-    }
->>>>>>> e474e7fce8e8ce2d5857c936187a4be02a04ff48
 }
 
 .container-fluid{
@@ -56,65 +43,19 @@ $phone: 480px;
     font-style: normal;
     font-size: 15px;
     font-weight: bold;
-<<<<<<< HEAD
     width: 100%;
     height: 100%;
 }
 .container-fluid .collapse .navbar-nav .nav-item{
    background-color: #FFC933;
-   width: 27%;
+   width: 29%;
    height: 60%;
    text-align: center;
    color: black;
-=======
-    background-color: rgb(66, 66, 66);
-    padding-bottom: 10px;
-    @media(max-width: $phone){
-        font-size: 8px;
-    }
 }
-
-.navbar .options-menu .incio-button{
-    background-color: rgb(255, 201, 51);
-    height: 20px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    width: 30%;
-    display: flex;
-    justify-content: center;
-    margin-left: 20px;
-    @media(max-width: $phone){
-        margin: 2%;
-        text-align: center;
-    }
-}
-
-.navbar .options-menu .contacto-button{
-    background-color: rgb(255, 201, 51);
-    height: 20px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    width: 30%;
-    display: flex;
-    justify-content: center;
-    @media(max-width: $phone){
-        margin: 2%;
-    }
-}
-
-.navbar .options-menu .about-button{
-    background-color: rgb(255, 201, 51);
-    height: 20px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    width: 30%;
-    display: flex;
-    justify-content: center;
-    margin-right: 20px;
-    @media(max-width: $phone){
-        margin: 2%;
-    }
->>>>>>> e474e7fce8e8ce2d5857c936187a4be02a04ff48
+.container-fluid .collapse .navbar-nav .nav-item a{
+    font-size: 15px;   
+    width: 100%;
 }
 .container-fluid .collapse .navbar-nav .nav-item:hover{
     background-color:cadetblue;
@@ -129,8 +70,16 @@ $phone: 480px;
 
   @media screen and (max-width: 1024px) {
     
-    .container-fluid .collapse .navbar-nav .nav-item{
-        width: 30%;
-        
+    .container-fluid .collapse .navbar-nav {
+        font-size: 12px;   
     }
+    .container-fluid .collapse .navbar-nav .nav-item{
+        font-size: 12px;   
+        height: 70%;
+    }
+    .container-fluid .collapse .navbar-nav .nav-item a{
+        font-size: 12px;   
+        height: 70%;
+    }
+
     }
