--- a/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.scss
+++ b/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
 .navbar{
     height: 20%;
     margin-top: 0;
@@ -15,17 +16,7 @@
     margin: 0;
     width: 100%;
     height: 100%;
-}
-.navbar .options-menu{
-    height: 30%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-family: 'Athiti', sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    background-color: rgb(66, 66, 66);
-    padding-bottom: 10px;
+
 }
 .container-fluid .row{
     width: 30%;
@@ -57,10 +48,14 @@
 }
 .container-fluid .collapse .navbar-nav .nav-item{
    background-color: #FFC933;
-   width: 27%;
+   width: 29%;
    height: 60%;
    text-align: center;
    color: black;
+}
+.container-fluid .collapse .navbar-nav .nav-item a{
+    font-size: 12px;   
+    width: 100%;
 }
 .container-fluid .collapse .navbar-nav .nav-item:hover{
     background-color:cadetblue;
@@ -75,7 +70,16 @@
 
   @media screen and (max-width: 1024px) {
     
-    .container-fluid .collapse .navbar-nav .nav-item{
-        width: 30%;
+    .container-fluid .collapse .navbar-nav {
+        font-size: 12px;   
     }
-  }
+    .container-fluid .collapse .navbar-nav .nav-item{
+        font-size: 12px;   
+        height: 70%;
+    }
+    .container-fluid .collapse .navbar-nav .nav-item a{
+        font-size: 12px;   
+        height: 70%;
+    }
+
+    }
