--- a/src/app/pages/perfilCliente/vista-citas-cliente/vista-citas-cliente.component.scss
+++ b/src/app/pages/perfilCliente/vista-citas-cliente/vista-citas-cliente.component.scss
@@ -250,5 +250,52 @@ $phone: 480px;
         padding-bottom: 0;
         margin-bottom: 0;
     }
+    caja1{
+        width: 120px;
+        height: 40px;
+        font-size: 10px;
+    }
+    .caja1 p{
+        font-size: 12px;
+        margin-top: 11%;
+    }
+    .caja2 p{
+        font-size: 12px;
+        margin-top: 11%;
+    }
+    
+    caja3{
+        width: 120px;
+        height: 40px;
+        font-size: 10px;
+    }
+    .caja3 p{
+        font-size: 12px;
+        margin-top: 11%;
+    }
+    caja4{
+        width: 120px;
+        height: 40px;
+        font-size: 10px;
+    }
+    .caja4 p{
+        font-size: 12px;
+        margin-top: 11%;
+    }
+    caja5{
+        width: 120px;
+        height: 40px;
+        font-size: 10px;
+    }
+    .caja5 p{
+        font-size: 12px;
+        margin-top: 11%;
+    }
+    .triangulo{
+        margin-top: 2.5%;
+        border-top: 10px solid transparent;
+        border-left: 20px solid white;
+        border-bottom: 10px solid transparent;
+    }
    
     }
