--- a/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
+++ b/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 
-$phone: 480px;
 .wrapper{
     height: 80%;
     width: 75%;
@@ -16,15 +15,15 @@ $phone: 480px;
 }
 
 .caja{
-    height: 40px;
+    height: 10%;
     display: flex;
     justify-content: space-between;
     margin-top: 25px;
     background-color:  rgb(255, 201, 51);
     width: 70%;
-    margin-left: 150px;
+    margin-left: 15%;
 }
-
+/*
 label{
     margin-left: 20px;
 }
@@ -33,51 +32,54 @@ label{
 .fechas{
     margin-left: 200px;
 }
+*/
 
+
+.parte-derecha{
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    height: 100%;
+}
 .fecha{
     background-color: red;
-    margin-left: -250px;
-    width: 450px;
-    margin-top: 8px;
+    width: 60%;
+    margin-top: 1.5%;
     height: 0px;
     color: white;
     font-family: 'Athiti', sans-serif;
 }
 
-.parte-derecha{
-    display: flex;
-    float: left;
-    justify-content: space-between;
-}
-
 .mayortit{
-    height: 20px;
+    height: 15%;
     font-family:'Athiti', sans-serif;
     color: white;
-    margin-left: 30px;
+    margin-left: 15%;
     font-size: 25px;
     padding: 12px;
 }
 
 .fa-check{
     color: yellowgreen;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .fa-trash{
     color: gray;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .fa-times{
     color:red;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .btn-1{
     border:none;
-    height: 30px;
-    margin: 6px;
+    height: 60%;
+    width: 30%;
+    margin-left: 2.5%;
+    margin-top: 5%;
     border-radius: 3px;
     cursor: pointer;
     outline: none;
@@ -105,6 +107,14 @@ label{
 
 .iconos{
     background-color: lightsteelblue;
+    width: 40%;
+    height: 100%;
+    float: right;
+}
+.boton{
+    width: 30%;
+    height: 90%;
+    padding-right: 0;
 }
 
 .btn-cita{
@@ -112,26 +122,44 @@ label{
     cursor: pointer;
     outline: none;
     font-family: 'Athiti', sans-serif;
-    height: 30px;
-    width: 200px;
-    margin-top: 5px;
-    margin-right: 5px;
+    height: 90%;
+    width: 100%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 0;
 }
 @media screen and (max-width: 600px) {
     .wrapper{
         width: 100%;
         height: 100%;
+        padding-left: 0;
+        margin-left: 0;
     }
-    .caja{
-        margin-left: 20%;
+
+    .iconos{
+        width: 40%;
     }
+    .boton{
+        width: 40%;
+    }
+    .fecha{
+        font-size: 12px;
+    }
+
 }
 @media screen and (max-width: 1024px) {
     .wrapper{
         width: 100%;
         height: 100%;
     }
-    .caja{
-        margin-left: 20%;
+    .iconos{
+        width: 40%;
+    }
+    .boton{
+        width: 40%;
+    }
+    .fecha{
+        margin-top: 0%;
+        font-size: 16px;
     }
 }
