--- a/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.scss
+++ b/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.scss
@@ -80,7 +80,7 @@
     margin-top: 5px;
     display: flex;
     justify-content: center;
-    height: 85%;
+    height: 90%;
     width: 55%;
     padding-bottom: 25px;
     padding-top: 10px;
@@ -91,6 +91,8 @@
 
 .form-square .form-square-background .cahnges-form{
     justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 .form-square .form-square-background .cahnges-form .identificador{
@@ -103,9 +105,12 @@
 }
 
 .form-square .form-square-background .cahnges-form .columnas{
-    display: flex;
-    justify-content: space-between;
     height: 80%;
+    width: 80%;
+    margin-top: 3.5%;
+    margin: auto;
+    justify-content: center;
+
    
 }
 
@@ -139,9 +144,10 @@
 
 .form-square .form-square-background .botones{
     display: flex;
-    justify-content: space-around;
-    width: 100%;
-    height: 35px;
+    justify-content: space-between;
+    width: 60%;
+    margin: auto;
+    height: 20%;
 }
 
 .form-square .form-square-background .botones .send-button{
@@ -150,14 +156,44 @@
     font-weight: bold;
     padding-left: 5px;
     padding-right: 5px;
-    margin-top: 7px;
+    margin-top: 3%;;
     background-color: white;
     border: none;
+    width: 40%;
+    border: black solid  1px;
+    height: 50%;
+}
+.form-square .form-square-background .cahnges-form .columna1 input{
+    align-items: center;
+    margin: auto;
+    margin-bottom: 0%;
+    margin-top: 2%;
+    width: 70%;
+    height: 10%;
+    border-radius: 36px 12px;                     
+    font-size: 15px;            
+    margin-left: 15%;
+    display: block;             
+    border: none;
+}
+.form-square .form-square-background .cahnges-form .columna1 label{
+    font-family: 'Athiti', sans-serif ;
+    font-size: 14px; 
+    font-weight: bold; 
+    margin-left: 15%;
+    margin-bottom: 0%;
 }
 
+label{
+    font-family: 'Athiti', sans-serif ;
+    font-size: 14px; 
+    font-weight: bold; 
+}
 input{
-    width: 500px;
-    height: 10px;
+    align-items: center;
+    margin: auto;
+    width: 70%;
+    height: 10%;
     border-radius: 36px 12px;                     
     font-size: 15px;            
     margin: 10px 10px 10px 5px; 
@@ -177,7 +213,7 @@ label{
         height: 90%;
         margin-bottom: 0;
     }
-    @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
         .wrapper{
             width: 100%;
             height: 100%;
@@ -209,8 +245,8 @@ label{
             justify-content: space-between;
         }
         .form-square .form-square-background .botones .send-button{
-            width: 30%;
-            height: 100%;
+            width: 40%;
+            height: 60%;
             font-size: 12px;
         }
         .citas{
@@ -231,5 +267,10 @@ label{
         .wrapper .input-section .input .busca{
             width: 80%;
            
+        }
+        .form-square .form-square-background .botones .send-button{
+            width: 40%;
+            height: 60%;
+            font-size: 12px;
         }
         }
